# rust-raytracing-in-one-weekend

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  color.rs  coordinate.rs  geometry.rs  interval.rs  main.rs  materials.rs  objects.rs  optical.rs  ray.rs  renderers.rs  sphere.rs  vector3.rs  vectors.rs  world.rs
src/geometry/: axis.rs  coordinate.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs
src/objects/: container.rs  hittable.rs  hittables.rs  object.rs  plane.rs  sphere.rs  triangle.rs
src/optical/: ray.rs  scatter.rs
src/renderers/: camera.rs  renderer.rs
src/vectors/: ops.rs  utils.rs  vector3.rs
