[package]
name = "rust-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.20"
num-traits = "0.2.16"
once_cell = "1.18.0"
rand = "0.8.5"
threadpool = "1.8.1"

[dependencies.uuid]
version = "^1.4.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
